# splitop

./: README.md  pyproject.toml
examples/: tunneling.py
src/splitop/: __init__.py  core.py  potentials.py
tests/: test_splitop.py
